--- a/scootplayer/gui/templates/index.html
+++ b/scootplayer/gui/templates/index.html
@@ -11,8 +11,10 @@
     </head>
 
     <body>
-        <div class="container-fluid">
-            <div class="row">
+        <button type="button" onclick="toggle_playback_graphs()" id="playback_button" class="button_left">Playback</button>
+        <button type="button" onclick="toggle_download_graphs()" id="download_button" class="button_right">Download</button>
+        <div class="container-fluid content">
+            <div class="row" id="playback_graphs">
                 {% for element in playback %}
                     {% if element != 'time_elapsed' %}
                         <div class="col-sm-6 card col-md-4">
@@ -24,22 +26,18 @@
                     {% endif %}
                 {% endfor %}
             </div>
-
-            <br>
-            <br>
-
-        <div class="row">
-            {% for element in download %}
-                {% if element != 'time_elapsed' %}
-                    <div class="col-sm-6 card col-md-4">
-                        <h3 class="title">{{element}}</h3>
-                        <div class="body">
-                            <div class="graph" id=download-{{element}}></div>
+            <div class="row" id="download_graphs">
+                {% for element in download %}
+                    {% if element != 'time_elapsed' %}
+                        <div class="col-sm-6 card col-md-4">
+                            <h3 class="title">{{element}}</h3>
+                            <div class="body">
+                                <div class="graph" id=download-{{element}}></div>
+                            </div>
                         </div>
-                    </div>
-                {% endif %}
-            {% endfor %}
-        </div>
+                    {% endif %}
+                {% endfor %}
+            </div>
         </div>
 
         <script src="static/jquery.min.js"></script>
@@ -63,5 +61,23 @@
 
             });
         </script>
+        <script>
+            function toggle_playback_graphs() {
+                $("#playback_graphs").show();
+                $("#playback_button").attr("disabled", true);
+
+                $("#download_button").attr("disabled", false);
+                $("#download_graphs").hide();
+            }
+
+            function toggle_download_graphs() {
+                $("#download_graphs").show();
+                $("#download_button").attr("disabled", true);
+
+                $("#playback_button").attr("disabled", false);
+                $("#playback_graphs").hide();
+            }
+        </script>
+
     </body>
 </html>
