--- a/scootplayer/gui/static/common.css
+++ b/scootplayer/gui/static/common.css
@@ -1,10 +1,9 @@
 .card .title {
     text-transform: uppercase;
-    font-size: 1.6em;
+    font-size: 1.3em;
     cursor: pointer;
     padding-bottom: 5px;
     margin-bottom: 5px;
-
 }
 
 .card .body {
@@ -21,42 +20,25 @@
 }
 
 body {
-    background: #FFFFFE;
+    background: #fffffd;
 }
+
+.buffer .buffer_title {
+    cursor: pointer;
+}
+
+.buffer .buffer_graphs {
+    border: 1px solid grey;
+    background: #F5F5F5;
+    margin: 20px 20px 40px 20px;
+    padding: 0 10px 40px 10px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+}
+
 
 .content {
     max-width: 1200px;
     width: 99%;
     margin: 0 auto;
     padding-bottom: 1em;
-}
-
-button {
-    border: 1px solid grey;
-    background: #EEE;
-}
-
-button:hover {
-    background: #DDD;
-}
-
-button:active {
-    background: #BBB;
-}
-
-button:disabled {
-    color: #EEEEEF;
-    background: #7EC0EE;
-}
-
-.button_right {
-    border-radius: 0px 15px 15px 0px;
-    padding-right: 10px;
-    margin-left: -2px;
-}
-
-.button_left {
-    border-radius: 15px 0px 0px 15px;
-    padding-left: 10px;
-    margin-right: -2px;
 }
